update environment.yml requirement.txt  readme

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
 numpy=1.26.0
 h5py
 pandas
@@ -17,5 +14,4 @@ regex
 matplotlib
 transformers
 timm
-
-# include pip install slideio
+slideio
