--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy=1.26.0
+numpy==1.26.0
 h5py
 pandas
-Pillow
-opencv
+pillow
+opencv-python
 tqdm
-pytorch
+torch
 torchvision
 pytorch-lightning
 ftfy
